# LocalVoxNews

./: .gitignore  .replit  package-lock.json  package.json  pyproject.toml  replit.md
backend/: app.py
news_generator/: README.md  pubspec.yaml
news_generator/android/app/: build.gradle.kts
news_generator/android/app/src/main/: AndroidManifest.xml
news_generator/android/app/src/main/kotlin/com/example/news_generator/: MainActivity.kt
news_generator/ios/Runner/: Info.plist
news_generator/ios/Runner.xcodeproj/: project.pbxproj
news_generator/lib/: main.dart
news_generator/test/: widget_test.dart
news_generator/web/: index.html  manifest.json
